--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 
-url: http://catsinspacesuits.github.io
+url: https://catsinspacesuits.github.io/peoples-project/
 root: /
